--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "primo-protractor-tests",
+  "scripts": {
+    "test": "protractor tmp/protractor.conf.js"
+  },
   "version": "1.0.0",
   "dependencies": {
     "jasmine": "^3.3.1",
