--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,14 @@ addons:
     - google-chrome-stable
 language: node_js
 node_js:
-  - 6
-  - 7
+  - 8
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
 install:
   - npm install
+  - npm install -g typescript
+  - npm install -g protractor
 script:
-  - npm run ci
+  - tsc
+  - npm run test
