--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
     - google-chrome-stable
 language: node_js
 node_js:
-  - 8
+  - 8.11.4
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
@@ -16,6 +16,8 @@ install:
   - npm install
   - npm install -g typescript
   - npm install -g protractor
+  - webdriver-manager update
+  - webdriver-manager --detach start
 script:
   - tsc
   - npm run test
