--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/jasmine": "^3.3.5",
     "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^10.12.18",
     "ts-node": "^7.0.1"
   }
 }
