--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,20 @@
 sudo: required
 dist: trusty
 addons:
+  chrome: stable
   apt:
-    sources:
-    - google-chrome
     packages:
-    - google-chrome-stable
+    - chromium-chromedriver
 language: node_js
 node_js:
   - 8.11.4
+cache:
+  directories:
+  - node_modules
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  - ln --symbolic /usr/lib/chromium-browser/chromedriver "${HOME}/bin/chromedriver"
 install:
   - npm install
   - npm install -g typescript
