--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,13 @@ cache:
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - ln --symbolic /usr/lib/chromium-browser/chromedriver "${HOME}/bin/chromedriver"
+  - ln -s /usr/lib/chromium-browser/chromedriver ~/bin/chromedriver
+  - webdriver-manager --detach start
 install:
   - npm install
   - npm install -g typescript
   - npm install -g protractor
   - webdriver-manager update
-  - webdriver-manager --detach start
 script:
   - tsc
   - npm run test
