--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jasmine": "^3.3.5",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^10.12.18",
+    "protractor-jasmine2-screenshot-reporter": "^0.5.0",
     "ts-node": "^7.0.1"
   }
 }
