add script for run tests locally

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "primo-protractor-tests",
   "scripts": {
     "test": "bash test_loop.sh",
-    "local_test": "protractor tmp/protractor.conf.js"
+    "local_test": "tsc&&protractor tmp/protractor.conf.js"
   },
   "version": "1.0.0",
   "dependencies": {
