--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 dist: trusty
 addons:
   chrome: stable
-  firefox: "56.0"
+  firefox: latest
   apt:
     packages:
     - chromium-chromedriver
@@ -12,9 +12,6 @@ node_js:
 cache:
   directories:
   - node_modules
-before_install:
- - sudo apt-get install xvfb
- - wget https://github.com/mozilla/geckodriver/releases/download/v0.19.0/geckodriver-v0.19.0-linux64.tar.gz
 install:
 - npm install
 - npm install -g typescript
