--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   "dependencies": {
     "chromedriver": "^2.45.0",
     "jasmine": "^3.3.1",
+    "lodash": "^4.17.11",
+    "minimist": "^1.2.0",
     "protractor": "^5.4.2",
     "protractor-http-client": "^1.0.4",
-    "typescript": "^3.2.2",
-    "lodash": "^4.17.11"
+    "typescript": "^3.2.2"
   },
   "devDependencies": {
     "@types/jasmine": "^3.3.5",
