--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "cpy": "^7.3.0",
     "jasmine": "^3.3.1",
     "jasmine-reporters": "^2.3.2",
-    "protractor": "^5.4.2",
-    "protractor-http-client": "^1.0.4",
+    "protractor": "latest",
+    "protractor-http-client": "latest",
     "typescript": "^3.2.2",
-    "webdriver-manager": "^12.1.7"
+    "webdriver-manager": "latest"
   },
   "devDependencies": {
     "@types/jasmine": "^3.3.5",
