--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "primo-protractor-tests",
   "scripts": {
     "test": "bash test_loop.sh",
-    "env_test": "tsc&&SET UV_THREADPOOL_SIZE=256&&node tmp/gotcha-util.js"
+    "env_test": "tsc&&SET UV_THREADPOOL_SIZE=256&&node tmp/gotcha-util.js",
+    "warmup": "tsc&&SET UV_THREADPOOL_SIZE=256&&protractor tmp/protractor.conf.js"
   },
   "version": "1.0.0",
   "dependencies": {
